--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,7 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   overflow: hidden;
+  direction: rtl;
 }
 .pizza-icon{
   height: 260px;
@@ -25,9 +26,14 @@
 .slice{
   transform-origin: 30% 100% !important;
 }
+
 h1{
   margin:0;
   font-size: 3em;
+}
+h2{
+  margin:5px;
+  font-size: 1.5em;
 }
 
 .App-link {
